--- a/app/globals.css
+++ b/app/globals.css
@@ -1,20 +1,30 @@
 @import "tailwindcss";
 
-:root {
-  --background: #0a0a0a;
-  --foreground: #ededed;
+@custom-variant dark (&:where(.dark, .dark *));
+
+@theme {
+  /* Colores base */
+  --color-Grey: rgba(0, 0, 0, .56);
+  --color-Grey-HoverLinks: rgba(0, 0, 0, .7);
+  --color-Grey-Dark: rgba(0, 0, 0, .8);
+  --color-White: rgba(255, 255, 255, .8);
+  --color-BGWhite: rgba(245, 245, 247, .8);
+  --color-Blue: rgba(0, 122, 255, .8);
+  --color-Blue-Hover: rgba(0, 122, 255, .7);
+  --color-BG-Color-html: #fff;
+  --color-NavBar-bg: rgba(245, 245, 247, .5);
+  --color-NavBar-Shadow: rgb(214, 214, 214);
+  --color-BG-html: radial-gradient(100% 50% at 50% 0%, rgba(0, 163, 255, 0.13) 0, rgba(0, 163, 255, 0) 50%, rgba(0, 163, 255, 0) 100%);
+  --color-imgBG: linear-gradient(0deg, rgb(199, 199, 199) 0%, rgba(245, 245, 247, 0) 70%);
 }
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+.dark {
+  --color-BG-Color-html: #171717;
+  --color-NavBar-bg: rgba(23, 22, 37, 0.5);
+  --color-NavBar-Shadow: rgba(23, 22, 37, 1);
+  --color-BG-html: radial-gradient(ellipse 80% 80% at 50% -20%, rgba(120, 119, 198, 0.3), rgba(255, 255, 255, 0));
+  --color-Grey: rgba(255, 255, 255, 0.8);
+  --color-Grey-DarkMode: rgba(0, 0, 0, .56);
+  --color-Grey-Dark: rgba(255, 255, 255, 0.8);
+  --color-imgBG: linear-gradient(0deg, rgba(0, 0, 0, .56) 0%, rgba(245, 245, 247, 0) 70%);
   }
-}
