--- a/app/globals.css
+++ b/app/globals.css
@@ -26,13 +26,9 @@
   --Grey: rgba(255, 255, 255, 0.8);
   --Grey-DarkMode: rgba(0, 0, 0, .56);
   --Grey-Dark: rgba(255, 255, 255, 0.8);
-  --imgBG: linear-gradient(0deg, rgba(0, 0, 0, .56) 0%, rgba(245, 245, 247, 0) 70%);
+  --imgBG: linear-gradient(0deg, rgba(120,119,198,0.3) 0%, rgba(245, 245, 247, 0) 70%);
   }
 
-h1,h2,h3,h4,h5,h6 {
+body {
   font-family: -apple-system-headline,system-ui,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Open Sans,Helvetica Neue,sans-serif
-}
-
-a,span,p,li {
-  font-family: -apple-system,system-ui,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Open Sans,Helvetica Neue,sans-serif
 }
