add verezza article

--- a/app/globals.css
+++ b/app/globals.css
@@ -10,7 +10,7 @@
   --White: rgba(255, 255, 255, .8);
   --BGWhite: rgba(245, 245, 247, .8);
   --Blue: rgb(0, 123, 255);
-  --Blue-Hover: rgba(0, 122, 255, .7);
+  --Blue-Hover: rgba(0, 123, 255, 0.863);
   --BG-html: #fff;
   --NavBar-bg: rgba(245, 245, 247, .5);
   --NavBar-Shadow: rgb(214, 214, 214);
